--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^5.65.17",
+    "compressorjs": "^1.2.1",
     "core-js": "^3.39.0",
     "cos-js-sdk-v5": "^1.8.6",
     "crypto-js": "^4.2.0",
